--- a/integradorUno/integradorUno/principal.Master
+++ b/integradorUno/integradorUno/principal.Master
@@ -4,7 +4,7 @@
 
 <html>
 <head runat="server">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="CSS/estilos.css" rel="stylesheet">
     <title></title>
@@ -13,44 +13,46 @@
 </head>
 <body>
     <form id="form1" runat="server">
-    
-    
-      
-    
-    <nav class='navbar navbar-inverse' >
-        <div class='container-fluid' id='contenedorDeNav' style='background-color: #3B5998; height: 65px;'>
-            <div class='navbar-header'>
-                <button type="button" class='navbar-toggle' data-toggle='collapse' data-target='#divNav'>
-
-                    <span class='icon-bar'></span>
-                    <span class='icon-bar'></span>
-                    <span class='icon-bar'></span>
 
 
-                </button>
-            </div>
 
-            <div class='collapse navbar-collapse' id='divNav'>
 
-                <ul class='nav navbar-nav'> 
-                    <li><a  href="Principal.aspx">Inicio</a></li>
-                    <li><a href="frmTramos.aspx"> Tramos</a></li>
-                    <li><a href="frmHorarios.aspx">Horarios</a></li>
-                    <li><a href="omnibusABM.aspx">Omnibus</a></li>
-                    <li><a href="frmPasaje.aspx">Pasajes</a></li>
-                    
+        <nav class='navbar navbar-inverse'>
+            <div class='container-fluid' id='contenedorDeNav' style='background-color: #3B5998; height: 65px;'>
+                <div class='navbar-header'>
+                    <button type="button" class='navbar-toggle' data-toggle='collapse' data-target='#divNav'>
 
-                </ul>
-            </div>
-        </div>
-    </nav>
-        <div>
-              <div style="background-color:black">
+                        <span class='icon-bar'></span>
+                        <span class='icon-bar'></span>
+                        <span class='icon-bar'></span>
 
+
+                    </button>
                 </div>
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-              
-            </asp:ContentPlaceHolder>
+
+                <div class='collapse navbar-collapse' id='divNav'>
+                    <ul class='nav navbar-nav'>
+                        <li><a href="frmTramos.aspx">Tramos</a></li>
+                        <li><a href="frmHorarios.aspx">Horarios</a></li>
+                        <li><a href="omnibusABM.aspx">Omnibus</a></li>
+                        <li><a href="frmPasaje.aspx">Pasajes</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div>
+            <div style="background-color: black">
+            </div>
+            <div class="container-fluid">
+                <div class="col-lg-8 col-lg-push-2">
+                    <main>                    
+                    <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+                        <div class="container col-lg-8 col-lg-push-2">
+                            </div>
+                    </asp:ContentPlaceHolder>
+                        </main>
+                </div>
+            </div>
         </div>
     </form>
 </body>
